[package]
name = "rem_admin"
version = "0.1.0"
edition = "2021"
default-run = "rem_admin"

[features]
default = ["server", "client", "controller-cli"]
server = []
client = []
controller-cli = []

[[bin]]
name = "server"
path = "src/server/main.rs"
required-features = ["server"]

[[bin]]
name = "client"
path = "src/client/main.rs"
required-features = ["client"]

[[bin]]
name = "rem_admin"
path = "src/main.rs"

[dependencies]
gtk = "0.18"
sysinfo = "0.29"
rand = "0.8"
enigo = "0.1"
terminal-clipboard = "0.4"
